--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,81 @@
+* {
+   box-sizing: border-box;
+}
+
 body {
   font-family: system-ui, sans-serif;
-  padding: 2rem;
+  /* padding: 2rem; */
+   margin: 0;
    background-color: #234;
+   overflow: hidden;
+}
+
+#wayBar {
+   background-color: #012;
+   color: #789;
+      height: 1.5rem;
+}
+   
+
+#app {
+   /* border: 2px solid pink; */
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+}
+
+#bottom {
+   /* position: fixed; */
+   /*    bottom: 0; */
+   /*    left: 0; */
+      /* width: 100vw; */
 }
 
 .input-row {
   display: flex;
+   /* border: 2px solid black; */
   gap: 0.5rem;
+   padding: 0.75rem;
+
 }
 
-input {
+/* input { */
+/*   padding: 0.5rem; */
+/*   font-size: 1rem; */
+/*   width: 250px; */
+/* } */
+
+#msgText {
+   flex-grow: 1;
   padding: 0.5rem;
   font-size: 1rem;
-  width: 250px;
+  /* width: 250px; */
 }
 
-button {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
+/* button { */
+/*   padding: 0.5rem 1rem; */
+/*   font-size: 1rem; */
+/*   cursor: pointer; */
+/* } */
+
+#navButtons {
+   display: flex;
+   justify-content: space-between;
+}
+
+#content {
+   flex-grow: 1;
+   /* border: 2px solid white; */
+   padding: 1rem;
+}
+
+.navBtn {
+   display: flex;
+   flex-grow: 1;
+   justify-content: center;
+   align-items: center;
+   /* border: 2px solid green; */
+   width: 10rem;
+   height: 4rem;
 }
