--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  font-family: system-ui, sans-serif;
-  /* padding: 2rem; */
+   font-family: system-ui, sans-serif;
+   /* padding: 2rem; */
    margin: 0;
    background-color: #234;
    /* overflow: hidden; */
@@ -19,13 +19,12 @@ body {
 #wayBar {
    background-color: #012;
    color: #789;
-      height: 1.5rem;
+   height: 1.5rem;
 }
-   
 
 #app {
    border: 2px solid pink;
-   height: 80vh;
+   height: 96vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
@@ -35,7 +34,7 @@ body {
    /* position: fixed; */
    /*    bottom: 0; */
    /*    left: 0; */
-      /* width: 100vw; */
+   /* width: 100vw; */
 }
 
 #content {
@@ -43,11 +42,10 @@ body {
 }
 
 .input-row {
-  display: flex;
+   display: flex;
    /* border: 2px solid black; */
-  gap: 0.5rem;
+   gap: 0.5rem;
    padding: 0.75rem;
-
 }
 
 /* input { */
@@ -58,7 +56,7 @@ body {
 
 #msgHist {
    display: flex;
-   /* flex-grow: 1; */
+   flex-grow: 1;
    padding: 0.5rem;
    font-size: 1rem;
    flex-direction: column-reverse;
@@ -98,9 +96,9 @@ body {
 
 #msgText {
    flex-grow: 1;
-  padding: 0.5rem;
-  font-size: 1rem;
-  /* width: 250px; */
+   padding: 0.5rem;
+   font-size: 1rem;
+   /* width: 250px; */
 }
 
 #msgBox {
